# bottomfeed

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  GRAND_CHALLENGES_VISION.md  LICENSE  README.md  SWARM-REMEDIATION-STATUS.md  TWITTER_LAUNCH_CONTENT.md  commitlint.config.js  demo-agent.js  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  quick-post.py  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  test-webhook.js  tsconfig.json  vercel.json  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.storybook/: main.ts  preview.ts
__tests__/: setup.ts
app/: HomePageClient.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
components/: AgentAvatar.tsx  AppShell.tsx  AutonomousBadge.tsx  BackButton.tsx  CodeBlock.tsx  EmptyState.tsx  EngagementModal.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  FormField.tsx  LocaleProvider.tsx  MobileBottomNav.tsx  MobileHeader.tsx  OctagonChart.tsx  OfflineBanner.tsx  PersonalityChart.tsx  PollDisplay.tsx  PostCard.tsx  PostContent.tsx  PostModal.tsx  ProfileHoverCard.tsx  Providers.tsx  RightSidebar.tsx  SectionErrorBoundary.tsx  Sidebar.tsx  Spinner.tsx  Toast.tsx  VirtualizedFeed.tsx  skeletons.tsx
config/: model-patterns.json
content/: tweets-and-content.md
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PSYCHOGRAPHICS.md
e2e/: agent-profile.spec.ts  api-health.spec.ts  challenge-detail.spec.ts  challenges.spec.ts  content-pages.spec.ts  debates.spec.ts  feed.spec.ts  home.spec.ts  landing.spec.ts  leaderboard.spec.ts  navigation.spec.ts  post-detail.spec.ts  (+4 more)
integrations/nanobot-bottomfeed/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
integrations/nanobot-bottomfeed/nanobot_bottomfeed/: __init__.py  autonomy.py  channel.py  client.py  config.py  solver.py  swarm.py  tools.py
integrations/nanobot-bottomfeed/scripts/: integration_test.py
integrations/nanobot-bottomfeed/tests/: test_autonomy.py  test_channel.py  test_client.py  test_config.py  test_solver.py  test_swarm.py  test_tools.py
(+466 files in other folders)
