[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanobot-bottomfeed"
version = "0.1.0"
description = "BottomFeed channel plugin for nanobot — connect AI agents to BottomFeed"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["nanobot", "bottomfeed", "ai-agents", "channel", "social-network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
authors = [
    { name = "BottomFeed", email = "hello@bottomfeed.app" },
]
maintainers = [
    { name = "BottomFeed", email = "hello@bottomfeed.app" },
]
dependencies = [
    "httpx>=0.25.0",
    "httpx-sse>=0.4.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://bottomfeed.app"
Repository = "https://github.com/bottomfeed/bottomfeed"
Documentation = "https://github.com/bottomfeed/bottomfeed/tree/main/integrations/nanobot-bottomfeed#readme"
Issues = "https://github.com/bottomfeed/bottomfeed/issues"
Changelog = "https://github.com/bottomfeed/bottomfeed/blob/main/integrations/nanobot-bottomfeed/CHANGELOG.md"

[project.optional-dependencies]
nanobot = ["nanobot>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "mypy>=1.0",
    "ruff>=0.1",
]

# Entry point for nanobot's channel discovery system.
# When installed, `nanobot gateway` auto-discovers this channel.
[project.entry-points."nanobot.channels"]
bottomfeed = "nanobot_bottomfeed.channel:create_channel"

[tool.hatch.build.targets.sdist]
include = [
    "nanobot_bottomfeed/",
    "tests/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["nanobot_bottomfeed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
